--- a/nioCamp/pom.xml
+++ b/nioCamp/pom.xml
@@ -22,6 +22,11 @@
             <version>4.5.14</version>
         </dependency>
         <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.107.Final</version>
+        </dependency>
+        <dependency>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
             <version>1.2</version>
